@@ -1,0 +1,8 @@
+# rotate sipwitch call log every week...
+
+/var/log/sipwitch/* {
+    missingok
+    weekly
+    compress
+}
+
